    usr/share/uhome/uhome.svg:
    - add initial packaging for snappy
  * snappy/Makefile, usr/bin/uhome, usr/bin/uhome-nest-update,
    usr/share/man/man1/uhome-nest-update.1:
    - update makefile to include svg
    - add a uhome-nest-update utility and manpage
    - speedup the uhome script by limiting pings to wait at most 1 second
    - iterate over the tries back and forth across devices

 -- Dustin Kirkland <kirkland@ubuntu.com>  Wed, 31 Dec 2014 00:57:41 -0600

uhome (1.1-0ubuntu1) vivid; urgency=medium

  * debian/control:
    - add python dependency

 -- Dustin Kirkland <kirkland@ubuntu.com>  Wed, 31 Dec 2014 00:57:39 -0600

uhome (1.0-0ubuntu1) vivid; urgency=medium

  * === added directory debian, === added directory debian/source,
    debian/compat, debian/control, debian/copyright, debian/install,
    debian/rules, debian/source/format, README, uhome:
    - initial commit
  * === added directory etc, === added directory etc/uhome, === added
    directory usr, === added directory usr/bin, debian/install,
    debian/postinst, etc/uhome/addresses, uhome => usr/bin/uhome:
    - create cronjob, install usr and etc
    - add user uhome for cronjob
    - parameterize script
  * debian/postrm, usr/bin/uhome:
    - set -e on script
  * === added directory etc/cron.d, === added directory var, === added
    directory var/lib, === added directory var/lib/uhome,
    debian/control, debian/postinst, debian/postrm (properties changed: -
    x to +x), etc/cron.d/uhome, README, usr/bin/uhome:
    - add cronjob, add uhome user for cronjob, support uhome and non-uhome
      user, track state in state file
  * etc/uhome/addresses, usr/bin/uhome:
    - drop support for mac address; doesn't seem to work very well;
      android devices I tested don't respond to broadcast ping
  * etc/cron.d/uhome, === removed directory etc/cron.d:
    - remove cronojob, afterall
  * === added directory usr/share, === added directory usr/share/uhome,