@@ -1,5 +1,8 @@
 all: clean
-	cp -a ../usr/bin/* ./bin
+	cp -a ../usr/bin/uhome ./bin
+	cp -a ../usr/bin/nest-update ./bin
+	cp -a ../usr/bin/nest-away ./bin
+	cp -a ../usr/bin/nest-away ./bin/nest-home
 	cp -a ../README ./meta/readme.md
 	cp -a ../usr/share/uhome/uhome.svg ./meta
 	VER=`grep -m1 "^static char\s\+VersionM" ./BUILD/main.c | sed -e "s/\";//" -e "s/.*\"//"`; sed -i -e "s/^version:.*/version: $$VER/" ./meta/package.yaml
