@@ -1,6 +1,6 @@
-.TH uhome-nest-update 1 "30 January 2015" uhome "uhome"
+.TH nest-update 1 "30 January 2015" uhome "uhome"
 .SH NAME
-uhome-nest-update\- tests whether or not you're home, based on device presence, and then updates your Nest
+nest-update\- tests whether or not you're home, based on device presence, and then updates your Nest
 
 .SH SYNOPSIS
 \fBuhome-nest-update\fP
